fix overflow table

--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -10,6 +10,8 @@
     align-items: center; */
     background: #F3F4F8;
     z-index: 10;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 .popupText {
