--- a/src/components/table.css
+++ b/src/components/table.css
@@ -1,7 +1,6 @@
 table{
     background: white;
     width: 100%;
-    padding: 20px;
 }
 table tr {
     display: flex;
